--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,20 +34,20 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  http: ^0.13.5
-  intl: ^0.18.0
+  http: ^1.1.2
+  intl: ^0.19.0
   shared_preferences: ^2.0.17
-  device_info_plus: ^8.1.0
+  device_info_plus: ^9.1.1
   dart_ipify: ^1.1.1
-  google_fonts: ^4.0.3
+  google_fonts: ^6.1.0
   badges: ^3.0.2
-  cached_network_image: ^3.2.3
-  flutter_html: ^2.2.1
+  cached_network_image: ^3.3.0
+  flutter_html: ^3.0.0-beta.2
   popup_banner: ^1.0.0
   path_provider: ^2.0.14
-  permission_handler: ^10.2.0
+  permission_handler: ^11.1.0
   open_file_plus: ^3.4.0
-  file_picker: ^5.0.1
+  file_picker: ^6.1.1
   flutter_rating_bar: ^4.0.1
 
 dev_dependencies:
@@ -59,7 +59,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
