--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  http: ^1.1.2
+  http: ^1.1.0
   intl: ^0.19.0
   shared_preferences: ^2.0.17
   device_info_plus: ^9.1.1
@@ -45,7 +45,8 @@ dependencies:
   flutter_html: ^3.0.0-beta.2
   popup_banner: ^1.0.0
   path_provider: ^2.0.14
-  permission_handler: ^11.1.0
+  permission_handler: ^11.0.1
+  get: ^4.6.6
   open_file_plus: ^3.4.0
   file_picker: ^6.1.1
   flutter_rating_bar: ^4.0.1
