--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.4+5
+version: 1.0.5+5
 
 environment:
   sdk: ">=2.19.2 <3.0.0"
@@ -37,6 +37,7 @@ dependencies:
   http: ^1.1.0
   intl: ^0.19.0
   shared_preferences: ^2.0.17
+  url_launcher: ^6.2.4
   device_info_plus: ^9.1.1
   dart_ipify: ^1.1.1
   google_fonts: ^6.1.0
