--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,8 @@ dependencies:
   animated_custom_dropdown: ^3.0.0
   image_picker: ^1.0.5
   image_cropper: ^5.0.0
+  # firebase_core: ^2.16.0
+  firebase_messaging: ^14.6.8
 
 
 dev_dependencies:
